# KumbhSetu-Chatbot-Grievance

./: .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 192817bc67af_initial_tables.py
app/: main.py
app/api/: routers_auth.py
app/core/: config.py  dependencies.py  rbac.py  security.py
app/db/: init_db.py  session.py
app/models/: __init__.py  complaint.py  token.py  user.py
app/rag/: build_vector_db.py  rag_chatbot.py
app/schemas/: auth.py  complaints.py
notebooks/: build_vector_db.ipynb  rag_chatbot.ipynb
scraper/: osm_scraper.py  scraper_links.py  selenium_retry.py
tests/: __init__.py  conftest.py  test_api.py
