[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "authlib>=1.6.9",
    "bcrypt==4.0.1",
    "chromadb>=1.5.5",
    "docx2txt>=0.9",
    "email-validator>=2.3.0",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.1",
    "geopy>=2.4.1",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "jq>=1.11.0",
    "langchain>=1.2.12",
    "langchain-classic>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.11",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.1",
    "line-profiler>=5.0.2",
    "locust>=2.43.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "passlib>=1.7.4",
    "pdfplumber>=0.11.9",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.2",
    "pypdf>=6.8.0",
    "pypdf2>=3.0.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.17.1",
    "rank-bm25>=0.2.2",
    "redis[async]>=7.3.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "selenium>=4.41.0",
    "sentence-transformers>=5.3.0",
    "snakeviz>=2.2.2",
    "sqlalchemy>=2.0.48",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
    "trafilatura>=2.0.0",
    "unstructured[docx,xlsx]>=0.21.5",
    "uvicorn>=0.41.0",
    "webdriver-manager>=4.0.2",
    "wikipedia>=1.4.0",
    "xgboost>=3.2.0",
]
